--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.7",
-    "ember-cli-app-version": "0.3.3",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-cli": "~2.16.2",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-htmlbars": "~1.3.3",
-    "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
     "ember-cli-uglify": "^1.0.1",
-    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-try": "0.0.6"
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "loader.js": "^4.2.3"
   },
   "keywords": [
     "ember-addon"
